--- a/build.gradle
+++ b/build.gradle
@@ -1,46 +1,30 @@
 plugins {
-	id 'fabric-loom' version '1.2-SNAPSHOT'
+	id 'dev.architectury.loom' version '1.2-SNAPSHOT'
 	id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_17
-targetCompatibility = JavaVersion.VERSION_17
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
+
+archivesBaseName = project.archives_base_name
+version = "${project.mod_version}-mc${project.minecraft_version}"
+group = project.maven_group
 
 repositories {
-	maven { url 'https://maven.terraformersmc.com/releases/' }
-	// maven { url 'https://maven.quiltmc.org/repository/release/' }
+
 }
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.mappings_version}:v2"
-	modImplementation "net.fabricmc:fabric-loader:${project.fabric_loader_version}"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+	forge "net.minecraftforge:forge:${project.forge_version}"
+
 	implementation "com.google.code.findbugs:jsr305:3.0.2"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	//modImplementation "net.fabricmc.fabric-api:fabric-api:" + project.fabric_version
-
-	modImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_api_version))
-	include(modImplementation(fabricApi.module("fabric-resource-loader-v0", project.fabric_api_version)))
-
-	modCompileOnly "com.terraformersmc:modmenu:${project.mod_menu_version}"
-}
-
-group = project.group + "." + project.mod_id
-archivesBaseName = project.mod_file_name + '-' + project.minecraft_version_out
-version = project.mod_version
-
-if (version.endsWith('-dev')) {
-	version += "." + new Date().format('yyyyMMdd.HHmmss')
 }
 
 processResources {
 	// Exclude the GIMP image files
 	exclude '**/*.xcf'
 	exclude '**/xcf'
-
-	// this will ensure that this task is redone when the versions change.
-	//inputs.property "minecraft_version", project.project.minecraft_version
 
 	inputs.property "mod_version", project.mod_version
 
@@ -50,20 +34,11 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	// ensure that the encoding is set to UTF-8, no matter what the system default is
-	// this fixes some edge cases with special characters not displaying correctly
-	// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
-	// If Javadoc is generated, this must be specified in that task too.
 	it.options.encoding = "UTF-8"
-
-	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
 	it.options.release = 17
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 }
 
@@ -73,21 +48,14 @@ jar {
 	}
 }
 
-tasks.publish.dependsOn build
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
-			artifactId project.archivesBaseName
-
-			// add all the jars that should be included when publishing to maven
-			//artifact(jar)             { builtBy remapJar }
 			from components.java
 		}
 	}
 
 	repositories {
-		maven {
-			url "$projectDir/../../CommonMaven"
-		}
+
 	}
 }
