--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,19 @@
-org.gradle.jvmargs = -Xmx3G
-org.gradle.daemon = false
-org.gradle.cache.cleanup = false
+# Done to increase the memory available to gradle.
+org.gradle.jvmargs=-Xmx1G
 
-group = fi.dy.masa
-mod_id = malilib
-mod_name = MaLiLib
-author = masa
-mod_file_name = malilib-fabric
+loom.platform=forge
 
-# Current mod version
-mod_version = 0.16.0
+# Base properties
+    # minecraft version
+    minecraft_version=1.20
+    # forge version, latest version can be found on https://files.minecraftforge.net/
+    forge_version=1.20-46.0.12
+    # yarn, latest version can be found on https://fabricmc.net/develop/
+    yarn_mappings=1.20+build.1
 
-# Minecraft, Fabric Loader and API and mappings versions
-minecraft_version_out = 1.20.0
-minecraft_version = 1.20
-mappings_version = 1.20+build.1
-
-fabric_loader_version = 0.14.21
-mod_menu_version = 7.0.0
-fabric_api_version = 0.83.0+1.20
+# Mod Properties
+    mod_version=0.1.0
+    maven_group=fi.dy.masa
+    archives_base_name=MaFgLib-Alpha
+    mod_id=malilib
+    mod_author=ThinkingStudio
