--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,14 @@ archivesBaseName = project.archives_base_name
 version = "${project.mod_version}-mc${project.minecraft_version}"
 group = project.maven_group
 
+loom {
+	forge {
+		mixinConfigs = [
+		        "malilib.mixins.json"
+		]
+	}
+}
+
 repositories {
 
 }
