--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ loom.platform=forge
 
 # Mod Properties
     mod_version=0.1.0
-    maven_group=fi.dy.masa
+    maven_group=org.thinkingstudio.mafglib
     archives_base_name=MaFgLib-Alpha
     mod_id=malilib
     mod_author=ThinkingStudio
